added copyright name and license lines for every file

--- a/demo-for-client/Customer Web App/website/styles/cart.css
+++ b/demo-for-client/Customer Web App/website/styles/cart.css
@@ -1,3 +1,6 @@
+/* Copyright (c) 2026 Roman */
+/* Licensed under the GNU Affero General Public License v3.0 */
+
 .cart-section {
     padding: 100px 20px 50px;
     max-width: 1200px;
