--- a/demo-for-client/Admin Dashboard/styles/admin.css
+++ b/demo-for-client/Admin Dashboard/styles/admin.css
@@ -1,3 +1,6 @@
+/* Copyright (c) 2026 Roman */
+/* Licensed under the GNU Affero General Public License v3.0 */
+
 * {
     margin: 0;
     padding: 0;
